--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,5 +1,14 @@
-{{!-- The following component displays Ember's default welcome message. --}}
-<WelcomePage />
-{{!-- Feel free to remove this! --}}
+<TeamSelector />
+<TeamSidebar />
+<!-- Channel -->
+<main class="flex-1 flex flex-col bg-white overflow-hidden channel">
+  <ChannelHeader @title='Frontend chat' @description='Chat for the CSS developers'/>
+  <!-- Channel Message List -->
+  <div class="py-4 flex-1 overflow-y-scroll channel-messages-list" role="list">
 
-{{outlet}}
+    <Message />
+    <Message />
+    <Message />
+  </div>
+  <ChannelFooter />
+</main>
