--- a/app/templates/teams/team/channel.hbs
+++ b/app/templates/teams/team/channel.hbs
@@ -1,6 +1,6 @@
 <!-- Channel -->
 <main class="flex-1 flex flex-col bg-white overflow-hidden channel">
-  <ChannelHeader @title='Frontend chat' @description='Chat for the CSS developers'/>
+  <ChannelHeader @title={{this.model.name}} @description={{this.model.description}}/>
   <!-- Channel Message List -->
   <div class="py-4 flex-1 overflow-y-scroll channel-messages-list" role="list">
 
